--- a/ESP/platformio.ini
+++ b/ESP/platformio.ini
@@ -8,14 +8,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32doit-devkit-v1]
+
 platform = espressif32
-board = esp32dev
+;board = esp32dev
+;framework = arduino
+
+;platform = https://github.com/Jason2866/platform-espressif32.git#feature/arduino-idf-v4.4
+;platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+board = esp32doit-devkit-v1
 framework = arduino
-monitor_speed = 115200
 upload_port = COM8
+monitor_speed = 115200
 lib_deps = 
+    ;https://github.com/CNMAT/OSC/blob/master/OSCMessage.h
+    https://github.com/CNMAT/OSC
     ;https://github.com/espressif/arduino-esp32/blob/master/libraries/WiFi/src/WiFiUdp.h  
-    ;https://github.com/espressif/arduino-esp32/blob/master/libraries/WiFi/src/WiFi.h
-    
-    
+    ;https://github.com/espressif/arduino-esp32/blob/master/libraries/WiFi
+; platform_packages = 
+;       framework-arduinoespressif32 @ https://github.com/marcovannoord/arduino-esp32.git#idf-release/v4.0
+;   	toolchain-xtensa32 @ 3.80200.200512    
+;   
+;board_build.arduino.upstream_packages = no  
